style: remove negative margin from unread messages, avoid overlaping with first opened chat

--- a/src/components/Chat/ChatHead.module.css
+++ b/src/components/Chat/ChatHead.module.css
@@ -51,7 +51,6 @@
   width: 1rem;
   height: 1rem;
   padding: 0.6rem;
-  margin-left: -6px;
   text-align: center;
 }
 
